--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-        backgrond-image: linear-gradient(gainsboro, pink, blue);
+        beckground-image: linear-gradient(gainsboro, pink, blue);
 }
  
 h1{
