--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
  
 header {
     background-color: #b7bcb9;
-    border-bottom: 1px solid #677b3e;
+    border-bottom: 3px solid #0a73eb;
 }
 
 
