--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;   
-    background-image: linear-gradient(cyan, lime, lightgray)
+    background-image: linear-gradient(gray, cyan, lime)
 }
  
 header {
