--- a/style.css
+++ b/style.css
@@ -40,3 +40,8 @@ p{
     border: 0.5rem solid black;
     border-radius: 24px;
 }
+
+.lista{
+    font-size: 30px;
+    color:blue;
+    list-style: none;
